<resources>
    <string name="app_name">Airline</string>
    <string name="menu">Menu</string>
    <string name="search_airline">Search Airline</string>
    <string name="search_flights">Search Flights</string>
    <string name="add_flight">Add Flight</string>
    <string name="help">Help</string>
    <string name="airline">Airline</string>
    <string name="airline_name">Airline Name</string>
    <string name="flight_number">Flight Number</string>
    <string name="from">From</string>
    <string name="departure_airport">3 Letters Airport Code </string>
    <string name="select_time">Select Time</string>
    <string name="departure_time">Departure</string>
    <string name="to">To</string>
    <string name="arrival_time">Arrival</string>
    <string name="add">Add</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
</resources>