<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchFlightsActivity">

    <TextView
        android:id="@+id/flights_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_flights"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <LinearLayout
        android:id="@+id/search_flights_form"
        android:layout_width="358dp"
        android:layout_height="398dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flights_search_text"
        app:layout_constraintVertical_bias="0.15">

        <TableLayout
            android:id="@+id/search_airline_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp">


            <TableRow
                android:id="@+id/search_flights_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:background="@drawable/rounded_border">

                <TextView
                    android:id="@+id/search_flights_row_text"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/airline"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/search_flights_row_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/airline_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="14sp" />
            </TableRow>
            <TableRow
                android:id="@+id/search_flights_src_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:background="@drawable/rounded_border">

                <TextView
                    android:id="@+id/search_flights_src_row_text"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/search_flights_src_row_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/departure_airport"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="14sp" />
            </TableRow>
            <TableRow
                android:id="@+id/search_flights_dest_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:background="@drawable/rounded_border">

                <TextView
                    android:id="@+id/search_flights_dest_row_text"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/search_flights_dest_row_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/departure_airport"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/flights_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/search_flights_table" />
    </LinearLayout>

    <Button
        android:id="@+id/search_flight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchFlights"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_flights_form"
        app:layout_constraintVertical_bias="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>